# BetterCPP

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
src/type/: type.hpp
src/type/Value/: Value.cpp  Value.hpp
test/: main.cpp
